# app/controllers/api/v1/users_controller.rb
@@ -1,7 +1,6 @@
 class Api::V1::UsersController < ApplicationController
   before_action :set_user, only: %i[show update destroy]
-
-  # skip_before_action :authenticate
+  skip_before_action :authenticate, only: [:create]
 
   def index
     @users = User.all
@@ -12,13 +11,24 @@ class Api::V1::UsersController < ApplicationController
     render json: @user
   end
 
+  # def create
+  #   @user = User.new(user_params)
+
+  #   if @user.save
+  #     render json: @user, status: :created
+  #   else
+  #     render json: @user.errors, status: :unprocessable_entity
+  #   end
+  # end
+
   def create
     @user = User.new(user_params)
+    @user.password_digest = BCrypt::Password.create(user_params[:password])
 
     if @user.save
-      render json: @user, status: :created
+      render json: { message: 'User created successfully' }, status: :created
     else
-      render json: @user.errors, status: :unprocessable_entity
+      render json: { error: "username #{@user.errors[:name].first}" }, status: :bad_request
     end
   end
 
@@ -42,6 +52,6 @@ class Api::V1::UsersController < ApplicationController
   end
 
   def user_params
-    params.require(:user).permit(:name, :email, :username, :type)
+    params.require(:user).permit(:name, :email, :username, :password, :password_confirmation, :type)
   end
 end
