# config/routes.rb
@@ -11,12 +11,12 @@ Rails.application.routes.draw do
 namespace :api do
   namespace :v1 do
     resources :items, only: [:index, :create, :destroy]
-    resources :users
+    resources :users, only: [:index, :update, :destroy]
     resources :sales
     resources :orders
+    post '/signup', to: 'users#create'
   end
 end
 
-post '/signup', to: 'users#create'
 post '/login', to: 'sessions#create'
 end
