# db/schema.rb
@@ -74,7 +74,8 @@ ActiveRecord::Schema[7.0].define(version: 2023_04_19_174243) do
     t.string "name"
     t.string "email"
     t.string "username"
-    t.string "type"
+    t.string "role"
+    t.string "password"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
